--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.20",
     "mysql": "^2.18.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
