--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: '3.7'
+version: '3.1'
 
 services:
-
-  postgres:
-    build: .
-    environment:
-      - JWT_SECRET=secret
-    ports:
-      - ${PORT}:4000
+  db:
+    image: postgres:11.2
     restart: always
-
-
+    environment:
+      POSTGRES_PASSWORD: example
+    volumes:
+      - ../db:/var/lib/postgresql/data
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+    ports:
+      - 5432:5432
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
