--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.1'
 
 services:
   db:
-    image: postgres:11.2
+    build: .
     restart: always
-    environment:
-      POSTGRES_PASSWORD: example
-    volumes:
-      - ../db:/var/lib/postgresql/data
-      - ./postgresql.conf:/etc/postgresql/postgresql.conf
     ports:
       - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres_db
+
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - 5060:8080
